[package]
name = "github_fetch"
version = "0.1.0"
edition = "2024"
authors = ["Alexis Lowe <alexis.lowe@chimbosonic.com>"]
categories = ["command-line-utilities"]
license = "MIT"


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }


[[bin]]
name = "fetch_repos"
path = "src/main.rs"
